--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -94,6 +94,10 @@ msgctxt "field:contract,account_invoices:"
 msgid "Invoices"
 msgstr "Factures"
 
+msgctxt "field:contract,all_premiums:"
+msgid "All Premiums"
+msgstr "Toutes les primes"
+
 msgctxt "field:contract,billing_information:"
 msgid "Current Billing Information"
 msgstr "Données de quittancement courant"
@@ -106,9 +110,9 @@ msgctxt "field:contract,billing_mode:"
 msgid "Billing Mode"
 msgstr "Mode de quittancement"
 
-msgctxt "field:contract,first_year_invoices:"
-msgid "First Year Invoices"
-msgstr "Quittances de la première année"
+msgctxt "field:contract,due_invoices:"
+msgid "Due Invoices"
+msgstr "Quittances dues"
 
 msgctxt "field:contract,invoices:"
 msgid "Invoices"
@@ -130,9 +134,9 @@ msgctxt "field:contract,premiums:"
 msgid "Premiums"
 msgstr "Primes"
 
-msgctxt "field:contract,total_invoice_amount:"
-msgid "Total Invoice Amount"
-msgstr "Montant total des primes"
+msgctxt "field:contract,receivable_today:"
+msgid "Receivable Today"
+msgstr "À recevoir aujourd'hui"
 
 msgctxt "field:contract.billing_information,billing_mode:"
 msgid "Billing Mode"
@@ -728,7 +732,7 @@ msgstr "Annulé"
 
 msgctxt ""
 "model:ir.action.act_window.domain,name:act_invoice_domain_posted_paid"
-msgid "Validated - Posted - Paid"
+msgid "Emises - Payées"
 msgstr "Validées - Emises - Payées"
 
 msgctxt "model:ir.ui.menu,name:"
