--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -1,4 +1,4 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -23,7 +23,14 @@ msgid ""
 "\n"
 "  Error:\n"
 "%s"
-msgstr "Erreur lors de la génération de la lettre:"
+msgstr ""
+"Erreur lors de la génération de la lettre:\n"
+"\n"
+"  Expression:\n"
+"%s\n"
+"\n"
+"  Error:\n"
+"%s"
 
 msgctxt "error:document.receive.attach:"
 msgid "Duplicate name on attachments : %s"
@@ -45,6 +52,10 @@ msgctxt "error:document.template.version:"
 msgid "The  names of attachments must be unique by resource!"
 msgstr ""
 "Le nom des pièces jointes doivent être unique pour une même ressource !"
+
+msgctxt "error:document.template:"
+msgid "No letter model found for date %s and language %s"
+msgstr "Pas de modèle de lettre trouvé pour le %s et la langue %s"
 
 msgctxt "error:extra_data:"
 msgid "The code must be unique!"
@@ -1853,6 +1864,10 @@ msgctxt "field:offered.option.description,coverage_amount_rules:"
 msgid "Coverage Amount Rules"
 msgstr "Règles de Montant de Couverture"
 
+msgctxt "field:offered.option.description,coverages_in_package:"
+msgid "OptionDescriptions In Package"
+msgstr "Garanties de la Formule"
+
 msgctxt "field:offered.option.description,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
@@ -1912,6 +1927,10 @@ msgstr "Type d'assurance"
 msgctxt "field:offered.option.description,insurer:"
 msgid "Insurer"
 msgstr "Assureur"
+
+msgctxt "field:offered.option.description,is_package:"
+msgid "Package"
+msgstr "Formule"
 
 msgctxt "field:offered.option.description,is_service:"
 msgid "Is a Service"
@@ -1990,6 +2009,38 @@ msgid "Write Date"
 msgstr "Date de mise à jour"
 
 msgctxt "field:offered.option.description-extra_data,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:offered.package-option.description,coverage:"
+msgid "OptionDescription"
+msgstr "Garantie"
+
+msgctxt "field:offered.package-option.description,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:offered.package-option.description,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:offered.package-option.description,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:offered.package-option.description,package:"
+msgid "Package"
+msgstr "Formule"
+
+msgctxt "field:offered.package-option.description,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:offered.package-option.description,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:offered.package-option.description,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
@@ -2613,6 +2664,10 @@ msgctxt "model:offered.option.description-extra_data,name:"
 msgid "Relation between OptionDescription and Extra Data"
 msgstr "Garantie-Données Complémentaires Relation"
 
+msgctxt "model:offered.package-option.description,name:"
+msgid "Package to Option Description Relation"
+msgstr "Lien Formule Garantie"
+
 msgctxt "model:offered.product,name:"
 msgid "Product"
 msgstr "Produit"
@@ -2640,6 +2695,153 @@ msgstr "Relation Processus Produit"
 msgctxt "model:rule_engine-extra_data,name:"
 msgid "Rule Engine - Extra Data"
 msgstr ""
+
+msgctxt "model:rule_engine.rule_parameter,selection:None"
+msgid ""
+"1 : 1\n"
+"2 : 2\n"
+"3 : 3\n"
+"4 : 4\n"
+"5 : 5\n"
+"6 : 6\n"
+"7 : 7\n"
+"8 : 8\n"
+"9 : 9\n"
+"10 : 10\n"
+"11 : 11\n"
+"12 : 12"
+msgstr ""
+
+msgctxt "model:rule_engine.rule_parameter,selection:None"
+msgid ""
+"1 : 1\n"
+"2 : 2\n"
+"3 : 3\n"
+"4 : 4\n"
+"5 : 5\n"
+"6 : 6\n"
+"7 : 7\n"
+"8 : 8\n"
+"9 : 9\n"
+"10 : 10\n"
+"11 : 11\n"
+"12 : 12\n"
+"13 : 13\n"
+"14 : 14\n"
+"15 : 15\n"
+"16 : 16\n"
+"17 : 17\n"
+"18 : 18\n"
+"19 : 19\n"
+"20 : 20\n"
+"21 : 21\n"
+"22 : 22\n"
+"23 : 23\n"
+"24 : 24\n"
+"25 : 25\n"
+"26 : 26\n"
+"27 : 27\n"
+"28 : 28\n"
+"29 : 29\n"
+"30 : 30\n"
+"31 : 31"
+msgstr ""
+
+msgctxt "model:rule_engine.rule_parameter,selection:None"
+msgid ""
+"real : Real\n"
+"at_given_day_of_year : At Given Day of Year"
+msgstr "real: Réel"
+
+msgctxt "model:rule_engine.rule_parameter,selection:given_day"
+msgid ""
+"1 : 1\n"
+"2 : 2\n"
+"3 : 3\n"
+"4 : 4\n"
+"5 : 5\n"
+"6 : 6\n"
+"7 : 7\n"
+"8 : 8\n"
+"9 : 9\n"
+"10 : 10\n"
+"11 : 11\n"
+"12 : 12\n"
+"13 : 13\n"
+"14 : 14\n"
+"15 : 15\n"
+"16 : 16\n"
+"17 : 17\n"
+"18 : 18\n"
+"19 : 19\n"
+"20 : 20\n"
+"21 : 21\n"
+"22 : 22\n"
+"23 : 23\n"
+"24 : 24\n"
+"25 : 25\n"
+"26 : 26\n"
+"27 : 27\n"
+"28 : 28\n"
+"29 : 29\n"
+"30 : 30\n"
+"31 : 31"
+msgstr ""
+
+msgctxt "model:rule_engine.rule_parameter,selection:given_month"
+msgid ""
+"1 : 1\n"
+"2 : 2\n"
+"3 : 3\n"
+"4 : 4\n"
+"5 : 5\n"
+"6 : 6\n"
+"7 : 7\n"
+"8 : 8\n"
+"9 : 9\n"
+"10 : 10\n"
+"11 : 11\n"
+"12 : 12"
+msgstr ""
+
+msgctxt "model:rule_engine.rule_parameter,selection:option_age_kind"
+msgid ""
+"real : Real\n"
+"at_given_day_of_year : At Given Day of Year\n"
+"at_end_of_month : At End of Month"
+msgstr "real: Réel"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Age kind for ending rule"
+msgstr "Type d'age pour règle de résiliation"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Given Day"
+msgstr "Jour donné"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Given Month"
+msgstr "Mois donné"
+
+msgctxt "model:rule_engine.rule_parameter,string:None"
+msgid "Maximum age for option (age included)"
+msgstr "Age maximum pour l'option (age inclu)"
+
+msgctxt "model:rule_engine.rule_parameter,string:given_day"
+msgid "Given Day"
+msgstr "Jour donné"
+
+msgctxt "model:rule_engine.rule_parameter,string:given_month"
+msgid "Given Month"
+msgstr "Mois donné"
+
+msgctxt "model:rule_engine.rule_parameter,string:option_age_kind"
+msgid "Age kind for ending rule"
+msgstr "Type d'age pour règle de résiliation"
+
+msgctxt "model:rule_engine.rule_parameter,string:option_max_age"
+msgid "Maximum age for option (age included)"
+msgstr "Age maximum pour l'option (age inclu)"
 
 msgctxt "selection:billing.premium.rule,config_kind:"
 msgid "Advanced"
