--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -1,18 +1,10 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:loan:"
 msgid "No loan sequence defined"
 msgstr "Pas de séquence de prêt définie"
-
-msgctxt "error:loan:"
-msgid ""
-"The sum of increments number of payments (%s) does not match the loan number"
-" of payments (%s)"
-msgstr ""
-"La somme des échéances des paliers (%s) ne correspond pas au nombre "
-"d'échéances du prêt (%s)"
 
 msgctxt "field:billing.premium.date_configuration,every_loan_payment:"
 msgid "Calculate each payment"
@@ -42,6 +34,54 @@ msgctxt "field:contract,used_loans:"
 msgid "Used Loans"
 msgstr "Prêts rattachés au contrat"
 
+msgctxt "field:contract-loan,contract:"
+msgid "Contract"
+msgstr "Contrat"
+
+msgctxt "field:contract-loan,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:contract-loan,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:contract-loan,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:contract-loan,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:contract-loan,loan:"
+msgid "Loan"
+msgstr "Prêt"
+
+msgctxt "field:contract-loan,loan_state:"
+msgid "Loan State"
+msgstr "Etat du prêt"
+
+msgctxt "field:contract-loan,number:"
+msgid "Number"
+msgstr "Numéro"
+
+msgctxt "field:contract-loan,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:contract-loan,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:contract-loan,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:contract-loan,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:contract.option,loan_shares:"
 msgid "Loan Shares"
 msgstr "Quotités"
@@ -62,10 +102,6 @@ msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer,default_share:"
 msgid "Default Loan Share"
 msgstr "Quotité par défaut"
-
-msgctxt "field:contract.wizard.option_subscription.options_displayer,loans:"
-msgid "Loans"
-msgstr "Prêts"
 
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,loan:"
@@ -125,10 +161,6 @@ msgctxt "field:loan,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
 
-msgctxt "field:loan,first_payment_amount:"
-msgid "First Payment Amount"
-msgstr "Montant Première Echéance"
-
 msgctxt "field:loan,first_payment_date:"
 msgid "First Payment Date"
 msgstr "Date de 1er Paiement"
@@ -145,17 +177,9 @@ msgctxt "field:loan,increments:"
 msgid "Increments"
 msgstr "Paliers"
 
-msgctxt "field:loan,increments_end_date:"
-msgid "Increments End Date"
-msgstr "Fin des Paliers"
-
 msgctxt "field:loan,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:loan,last_payment_amount:"
-msgid "Last Payment Amount"
-msgstr "Montant Dernière Echéance"
 
 msgctxt "field:loan,loan_shares:"
 msgid "Loan Shares"
@@ -181,10 +205,6 @@ msgctxt "field:loan,parties:"
 msgid "Parties"
 msgstr "Acteur"
 
-msgctxt "field:loan,payment_amount:"
-msgid "Payment Amount"
-msgstr "Montant Echéance"
-
 msgctxt "field:loan,payment_frequency:"
 msgid "Payment Frequency"
 msgstr "Périodicité"
@@ -200,6 +220,10 @@ msgstr "Taux Annuel"
 msgctxt "field:loan,rec_name:"
 msgid "Name"
 msgstr "Nom"
+
+msgctxt "field:loan,state:"
+msgid "State"
+msgstr "État"
 
 msgctxt "field:loan,write_date:"
 msgid "Write Date"
@@ -306,7 +330,7 @@ msgid "Number of Payments"
 msgstr "Nombre d'Echéances"
 
 msgctxt "field:loan.increment,payment_amount:"
-msgid "Amount"
+msgid "Payment Amount"
 msgstr "Montant"
 
 msgctxt "field:loan.increment,rate:"
@@ -633,6 +657,10 @@ msgctxt "field:party.synthesis.menu.loan,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "model:contract-loan,name:"
+msgid "Contract Loan"
+msgstr "Prêt du contrat"
+
 msgctxt "model:ir.action,name:"
 msgid "Loan Share Propagation"
 msgstr "Propager Quotité"
@@ -695,7 +723,7 @@ msgid "Party Synthesis Menu Loan"
 msgstr "Synthèse acteur - Prêts"
 
 msgctxt "model:tag,name:tag_loan"
-msgid "Loan"
+msgid "Prêt"
 msgstr "Prêt"
 
 msgctxt "selection:loan,deferal:"
@@ -730,10 +758,6 @@ msgctxt "selection:loan,kind:"
 msgid "Intermediate"
 msgstr "Prêt Relais"
 
-msgctxt "selection:loan,kind:"
-msgid "Leasing"
-msgstr "Crédit Bail"
-
 msgctxt "selection:loan,payment_frequency:"
 msgid ""
 msgstr " "
@@ -761,6 +785,14 @@ msgstr "Semaine"
 msgctxt "selection:loan,payment_frequency:"
 msgid "Year"
 msgstr "Année"
+
+msgctxt "selection:loan,state:"
+msgid "Calculated"
+msgstr "Calculé"
+
+msgctxt "selection:loan,state:"
+msgid "Draft"
+msgstr "Brouillon"
 
 msgctxt "selection:loan.increment,deferal:"
 msgid ""
@@ -794,6 +826,10 @@ msgctxt "selection:offered.option.description,family:"
 msgid "Loan"
 msgstr "Emprunteur"
 
+msgctxt "view:contract-loan:"
+msgid "Contract Loan"
+msgstr "Prêt du contrat"
+
 msgctxt "view:contract.option.extra_premium:"
 msgid "‰"
 msgstr ""
@@ -809,6 +845,10 @@ msgstr "%"
 msgctxt "view:contract:"
 msgid "Create Loan"
 msgstr "Créer un prêt"
+
+msgctxt "view:contract:"
+msgid "Loans"
+msgstr "Prêts"
 
 msgctxt "view:insurer:"
 msgid "Insurers"
@@ -863,16 +903,8 @@ msgid "Calculate Amortization Table"
 msgstr "Calculer la table d'amortissement"
 
 msgctxt "view:loan:"
-msgid "Increments"
-msgstr "Paliers"
-
-msgctxt "view:loan:"
 msgid "Loan"
 msgstr "Prêt"
-
-msgctxt "view:loan:"
-msgid "Loan Create Parameters"
-msgstr "Paramètres du Prêt"
 
 msgctxt "view:loan:"
 msgid "Loan Parameters"
@@ -885,6 +917,10 @@ msgstr "Prêts"
 msgctxt "view:loan:"
 msgid "Quota share"
 msgstr "Quotité"
+
+msgctxt "view:loan:"
+msgid "_Draft"
+msgstr "_Brouillon"
 
 msgctxt "view:party.display_insured_outstanding_loan_balance.line_view:"
 msgid "Insurer"
@@ -905,38 +941,6 @@ msgstr "Encours assurés"
 msgctxt "view:party.party:"
 msgid "Loan Information"
 msgstr "Emprunteur"
-
-msgctxt "wizard_button:loan.create,loan,end:"
-msgid "Cancel"
-msgstr "Annuler"
-
-msgctxt "wizard_button:loan.create,loan,update_loan:"
-msgid "Next"
-msgstr "Suivant"
-
-msgctxt "wizard_button:loan.create,loan_step_increments,create_payments:"
-msgid "Next"
-msgstr "Suivant"
-
-msgctxt "wizard_button:loan.create,loan_step_increments,end:"
-msgid "Cancel"
-msgstr "Annuler"
-
-msgctxt "wizard_button:loan.create,loan_step_increments,return_to_loan:"
-msgid "Previous"
-msgstr "Précédent"
-
-msgctxt "wizard_button:loan.create,loan_step_payments,end:"
-msgid "Cancel"
-msgstr "Annuler"
-
-msgctxt "wizard_button:loan.create,loan_step_payments,return_to_increments:"
-msgid "Previous"
-msgstr "Précédent"
-
-msgctxt "wizard_button:loan.create,loan_step_payments,save_loan:"
-msgid "End"
-msgstr "Terminer"
 
 msgctxt ""
 "wizard_button:party.display_insured_outstanding_loan_balance,insured_outstanding_loan_balance_view,end:"
